# lastfm-cli-scrobbler

./: README.md  setup.cfg  setup.py
lastfm_cli_scrobbler/: last_my.py  last_pylast.py
