[metadata]
name = lastfm-cli-scrobbler
version = 0.1.0
description = Last.fm CLI Scrobbler
url = https://github.com/maximtrp/lastfm-cli-scrobbler
author = Maksim Terpilowski
author_email = maximtrp@gmail.com
keywords = python, lastfm, cli, scrobbler
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Information Technology
    Intended Audience :: End Users/Desktop
    Topic :: Home Automation
    Topic :: Internet
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.5
packages = find:
install_requires =
    requests
    pylast
    mutagen

[options.entry_points]
console_scripts =
    scrobble = lastfm_cli_scrobbler.last_my:main
    scrobble2 = lastfm_cli_scrobbler.last_pylast:main
